--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <!-- this link is for font icons -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_outward"
+    />
     <link rel="stylesheet" href="style.css" />
 
     <title>Document</title>
@@ -37,6 +42,13 @@
             <li>
               <span>News & Events</span>
               <div class="arrow-diagonal"></div>
+              <div class="hidden-Info">
+                <div class="box no-border">
+                  <a class="box-subPara">News & Events<div class="arrow material-symbols-outlined">
+                    arrow_outward
+                  </div></a>
+                </div>
+              </div>
             </li>
             <li>
               <span>Multimedia</span>
@@ -67,20 +79,26 @@
       <div class="current-stats">
         <div class="box">
           <h3 class="box-subHeading">CURRENT MISSION</h3>
-          <p class="box-subPara">Expedition 72</p>
+          <a class="box-subPara">Expedition 72<div class="arrow material-symbols-outlined">
+            arrow_outward
+          </div></a>
         </div>
         <div class="box">
           <h3 class="box-subHeading">SPACE STATION SCIENCE</h3>
-          <p class="box-subPara">Research and Technology</p>
+          <div class="box-subPara">Research and Technology<div class="arrow material-symbols-outlined">
+            arrow_outward
+          </div></div>
         </div>
         <div class="box">
-          <h3 class="box-subHeading" style="font-size: 16px">
-            Preguntas frecuentes
-          </h3>
-          <p class="box-subPara">El salud de los astronautas</p>
+          <h3 class="box-subHeading">Preguntas frecuentes</h3>
+          <a class="box-subPara">El salud de los astronautas<div class="arrow material-symbols-outlined">
+            arrow_outward
+          </div></a>
         </div>
       </div>
     </main>
+
+    
     <script src="app.js"></script>
   </body>
 </html>
