Adding new elements and update the website

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <div class="navbar">
         <div class="nav-item1">
           <ul>
-            <li>
-              <span>Explore</span>
+            <li class="padding-nav">
+              <span class="express">Explore</span>
               <div class="arrow-diagonal"></div>
             </li>
             <div class="inp"><input type="text" placeholder="Search..." /></div>
@@ -39,22 +39,49 @@
         </div>
         <div class="nav-item3">
           <ul>
-            <li>
-              <span>News & Events</span>
+            <li class="padding-nav">
+              <span id="news" class="express">News & Events</span>
               <div class="arrow-diagonal"></div>
               <div class="hidden-Info">
                 <div class="box no-border">
-                  <a class="box-subPara">News & Events<div class="arrow material-symbols-outlined">
-                    arrow_outward
-                  </div></a>
+                  <a class="box-subPara">News & Events<div class="arrow material-symbols-outlined trans">arrow_outward</div></a>
                 </div>
+                  <ul class="hdn-items">
+                    <li>ALL NASA NEWS</li>
+                    <li>Video Series on NASA+</li>
+                    <li>Podcasts</li>
+                    <li>Blogs</li>
+                    <li>Newsletters</li>
+                    <li>Social Media</li>
+                    <li>Media Resources</li>
+                    <li>Events</li>
+                    <li>Upcoming Launches & Landings</li>
+                    <li>Virtual Guest Program</li>
+                  </ul>
               </div>
             </li>
-            <li>
-              <span>Multimedia</span>
+            <li class="padding-nav">
+              <span id="multi" class="express">Multimedia</span>
               <div class="arrow-diagonal"></div>
+              <div class="hidden-Info hidden-Info2">
+                <div class="box no-border">
+                  <a class="box-subPara">News & Events<div class="arrow material-symbols-outlined trans">arrow_outward</div></a>
+                </div>
+                  <ul class="hdn-items">
+                    <li>NASA+</li>
+                    <li>Images</li>
+                    <li>NASA Live</li>
+                    <li>NASA Apps</li>
+                    <li>Podcasts</li>
+                    <li>Image of the Day</li>
+                    <li>e-Books</li>
+                    <li>Sounds and Ringtones</li>
+                    <li>Interactives</li>
+                    <li>STEM Multimedia</li>
+                  </ul>
+              </div>
             </li>
-            <li>NASA+ <button>LIVE</button></li>
+            <li class="padding-nav">NASA+ <button>LIVE</button></li>
           </ul>
         </div>
       </div>
@@ -79,26 +106,28 @@
       <div class="current-stats">
         <div class="box">
           <h3 class="box-subHeading">CURRENT MISSION</h3>
-          <a class="box-subPara">Expedition 72<div class="arrow material-symbols-outlined">
-            arrow_outward
-          </div></a>
+          <a class="box-subPara"
+            >Expedition 72
+            <div class="arrow material-symbols-outlined">arrow_outward</div></a
+          >
         </div>
         <div class="box">
           <h3 class="box-subHeading">SPACE STATION SCIENCE</h3>
-          <div class="box-subPara">Research and Technology<div class="arrow material-symbols-outlined">
-            arrow_outward
-          </div></div>
+          <div class="box-subPara">
+            Research and Technology
+            <div class="arrow material-symbols-outlined">arrow_outward</div>
+          </div>
         </div>
         <div class="box">
           <h3 class="box-subHeading">Preguntas frecuentes</h3>
-          <a class="box-subPara">El salud de los astronautas<div class="arrow material-symbols-outlined">
-            arrow_outward
-          </div></a>
+          <a class="box-subPara"
+            >El salud de los astronautas
+            <div class="arrow material-symbols-outlined">arrow_outward</div></a
+          >
         </div>
       </div>
     </main>
 
-    
     <script src="app.js"></script>
   </body>
 </html>
